--- a/weather_app/src/index.css
+++ b/weather_app/src/index.css
@@ -1,15 +1,79 @@
 @import url('https://fonts.googleapis.com/css2?family=Monoton&display=swap');
 
+
+*{
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+.App{
+  position: relative;
+  background-color: rgba(0, 0, 0, .1);
+  width: 100%;
+  height: 100vh;
+  color: rgb(255, 246, 242);
+}
+
+.Upper{
+  width: 100%;
+  margin: 1rem auto;
+}
+.Details{
+  position: relative;
+  right: -90%;
+  transform-origin: 0 0;
+  transform: rotate(-90deg);
+}
+.Lower{
+  display:flex;
+  justify-content: space-between;
+  text-align: center;
+  width:100%;
+  padding: 1rem;
+  margin:1rem auto;
+  
+
+}
+
+.App:before{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  content: '';
+  background: url('./Imgs/Background.jpg') no-repeat center center/cover;
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  font-family: 'Monoton', 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.Container{
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  top:10%;
+  max-width: 700px;
+  max-height: 700px;
+  margin:auto;
+  padding:0 1 rem;
 }
+
+p{
+  font-size: 2rem ;
+}
+h1{
+  font-size: 6rem;
+}
+.Bold{
+  font-weight: 500;
+}
+
