--- a/weather_app/src/index.css
+++ b/weather_app/src/index.css
@@ -32,12 +32,20 @@ input{
   width: 100%;
   margin: 1rem auto;
 }
+.Temperature{
+  display: flex;
+  align-items: center;
+}
+
+
 .Details{
   position: relative;
   right: -90%;
   transform-origin: 0 0;
   transform: rotate(-90deg);
+  
 }
+
 .Lower{
   display:flex;
   justify-content: space-between;
@@ -45,6 +53,7 @@ input{
   width:100%;
   padding: 1rem;
   margin:1rem auto;
+  
   
 
 }
